...
                  {sportName}
                </Text>
              </View>
            </View>
            <View className="flex-row items-start justify-between mb-5 pb-5 border-b border-black/20">
              <Text className="text-text text-base font-medium pt-1">
                Lokation
              </Text>
              <View className="bg-background rounded-xl px-4 py-3 flex-1 ml-4 max-w-[70%]">
                {locationParts.map((part, idx) => (
                  <Text key={idx} className="text-text text-sm">
                    {part}
                  </Text>
...
