...
  Football: 'Fodbold',
  Basketball: 'Basketball',
  PadelTennis: 'Padel Tennis',
  TableTennis: 'Bordtennis',
  Golf: 'Golf',
  Volleyball: 'Volleyball',
  Badminton: 'Badminton',
  Boxing: 'Boxning',
  Squash: 'Squash',
  Petanque: 'Petanque',
  Hockey: 'Hockey',
  Handball: 'Håndbold',
  Running: 'Løb',
...
