...
  return (
    <ScreenContainer className="pt-1">
      <TopActionBar
        title={'Profil'}
        leftAction={
          <Pressable
            testID="editProfile"
            onPress={() => router.push('/profile/information' as any)}
            className="flex-row items-center bg-surface px-3 py-1.5 rounded-full gap-2"
          >
            <Text className="text-white text-sm font-medium">
              Rediger profil
            </Text>
...
