...
export default function SettingsScreen() {
  const router = useRouter();

  const { logout } = useAuth();

  const handleLogout = () => {
    Alert.alert('Log ud', 'Er du sikker på, at du vil logge ud?', [
      { text: 'Annuller', style: 'cancel' },
      {
        text: 'Log ud',
        style: 'destructive',
        onPress: async () => {
          await logout();
...
